# sun-dasheng

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  overview.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  backtest.py  market.py  order.py  preferences.py  risk.py  router.py  signal.py  strategy.py  ws.py
backend/app/core/: cosmic_algorithm.py  dna_replication.py  holding_period.py  market_regime.py  thesis_tracker.py  topo_invariants.py
backend/app/models/: __init__.py  backtest.py  backtest_trade.py  base.py  market.py  order.py  position.py  risk.py  signal.py  user_preference.py
backend/app/schemas/: __init__.py  backtest.py  backtest_scan.py  market.py  order.py  preference.py  risk.py  signal.py
backend/app/services/: __init__.py
backend/app/services/backtest/: __init__.py  benchmark.py  chart_renderer.py  engine.py  event_loop.py  exporter.py  metrics.py  models.py  order_book.py  parameter_optimizer.py  portfolio.py  position_manager.py  report_generator.py  repository.py  signal_runner.py  slippage_model.py
backend/app/services/execution/: __init__.py  binance_trader.py  order_manager.py
backend/app/services/market/: phase_analyzer.py
backend/app/services/market_data/: __init__.py  base.py  tdx_provider.py  (+1 more)
backend/app/tasks/: __init__.py  backtest_tasks.py  celery_app.py  market_tasks.py  risk_tasks.py  signal_tasks.py
backend/templates/: backtest_report.html.j2
backend/tests/: conftest.py
(+131 files in other folders)
